fix loading and scrollbar

--- a/src/components/SaveLoad/Saveload.css
+++ b/src/components/SaveLoad/Saveload.css
@@ -3,7 +3,7 @@
     position:absolute;
     top: 0;
     left: 0;
-    height: 50px;
+    height: 62px;
     background-color: rgb(231, 235, 240) !important;
     border-bottom: 2px solid rgba(0, 0, 0, 0.2);
     display: flex;
@@ -12,9 +12,48 @@
 .device-panel-Skeleton{
     display:flex;
     position: relative;
-    left: 15%;
+    width: 35%;
+
+}
+.tools-panel-Skeleton{
+    display:flex;
+    position: relative;
+    width: 35%;
+    justify-content: flex-end;
+}
+.views-panel-Skeleton{
+    width: 15%;
+    display:flex;
+    justify-content: space-between;
 }
 .block-panel-Skeleton{
-    position: relative;
-    left: 5px;
+    width: 15%;
+}
+.Canvas-Skeleton{
+    width: 100%;
+    position: absolute;
+    height: calc(100% - 62px);
+    top: 62px;
+    display:flex;
+}
+.blocksection-skeleton{
+    width: 15%;
+    height: 100%;
+    border-right: 2px solid rgba(0, 0, 0, 0.2);
+
+}
+
+.canvassection-skeleton{
+    width: 70%;
+    background-color: whitesmoke;
+    height: 100%;
+
+}
+
+.viewsection-skeleton{
+    width: 15%;
+    height: 100%;
+    border-left: 2px solid rgba(0, 0, 0, 0.2);
+
+
 }
